syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sdj3.grpcspringbootx.protobuf";

// service definitions
service TextConverter {
  rpc getAnimalsByProductId(RequestText) returns(ResponseText);
  rpc getProductByAnimalId(RequestText) returns(ResponseText);
}

message RequestText {
  int32 input_text = 1;
}

message ResponseText {
  string output_text = 1;
}